; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/mm/extr_mm.c_MmSetMemoryType.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/mm/extr_mm.c_MmSetMemoryType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MM_PAGE_SIZE = common dso_local global i32 0, align 4
@PageLookupTableAddress = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MmSetMemoryType(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @MM_PAGE_SIZE, align 4
  %12 = call i32 @ROUND_UP(i32 %10, i32 %11)
  %13 = load i32, i32* @MM_PAGE_SIZE, align 4
  %14 = sdiv i32 %12, %13
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @MmGetPageNumberFromAddress(i32 %15)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* @PageLookupTableAddress, align 4
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @MmAllocatePagesInLookupTable(i32 %17, i32 %18, i32 %19, i32 %20)
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @ROUND_UP(i32, i32) #1

declare dso_local i32 @MmGetPageNumberFromAddress(i32) #1

declare dso_local i32 @MmAllocatePagesInLookupTable(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
